# X-Gov-Agent-Network

./: .gitignore  COMMANDS.md  DEMO_GUIDE.md  DEPLOY_STEPS.sh  FINAL_STATUS.md  FINAL_SUMMARY.md  FRONTEND_GUIDE.md  HOW_TO_RUN.txt  INTEGRATION_GUIDE.md  LICENSE  OPEN_BROWSER.sh  OPEN_FRONTEND.txt  PROFESSIONAL_FEATURES.md  PROJECT_COMPLETE.md  PROJECT_VERIFIED.md  QUICK_DEPLOY.sh  QUICK_START.md  README.md  RUN_PROJECT.md  START.sh  START_ALL.sh  START_FRONTEND.sh  TEST_SCENARIO.md  push_to_github.sh  register_agents.py  test_setup.sh  test_x402_flow.sh  vercel.json
agents/orchestrator-agent/: agent_manager.py  agent_registry.json  api_server.py  main.py  requirements.txt  wallet.json
agents/service-agents/data-analyst-agent/: README.md  package-lock.json  package.json  server.js
client-libs/xgov-sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json
client-libs/xgov-sdk-ts/src/: index.ts  test.ts
docs/: ARCHITECTURE.md  DEPLOYMENT.md  X402_INTEGRATION.md
programs/: Cargo.toml
programs/src/: lib.rs
web-ui/: README.md  package-lock.json  package.json  tailwind.config.js
web-ui/src/app/: globals.css  layout.tsx  page.tsx
web-ui/src/app/agents/: page.tsx
web-ui/src/app/orchestrate/: page.tsx
web-ui/src/components/: NetworkInsights.tsx  OrchestrationTimeline.tsx  TaskInput.tsx  TaskOutput.tsx
web-ui/src/data/: agents.json
web-ui/src/lib/: api.ts  solana.ts
